* Restores overflows to fix rendering issues with iframe

--- a/packages/obojobo-document-engine/ObojoboDraft/Chunks/IFrame/editor-component.scss
+++ b/packages/obojobo-document-engine/ObojoboDraft/Chunks/IFrame/editor-component.scss
@@ -33,6 +33,8 @@
 		max-height: 15em;
 		border-radius: $dimension-rounded-radius;
 		background-color: $bg-color;
+		overflow: hidden;
+		margin: 0 auto;
 		cursor: pointer;
 
 		&::before {
@@ -41,9 +43,9 @@
 			background-image: url('./bg.svg');
 			background-size: 38.16px 38.16px; /* stylelint-disable-line unit-blacklist */
 			position: absolute;
-			left: 0;
+			left: 3.3em;
 			top: 0;
-			right: 0;
+			right: 3.3em;
 			bottom: 0;
 			transition: transform $duration-animation-default, opacity $duration-animation-default;
 		}
