--- a/packages/obojobo-document-engine/ObojoboDraft/Chunks/IFrame/viewer-component.scss
+++ b/packages/obojobo-document-engine/ObojoboDraft/Chunks/IFrame/viewer-component.scss
@@ -64,6 +64,7 @@
 			top: 0;
 			bottom: 0;
 			right: 0;
+			overflow: hidden;
 			border-radius: $dimension-rounded-radius;
 
 			> iframe {
@@ -178,6 +179,7 @@
 			max-height: 15em;
 			border-radius: $dimension-rounded-radius;
 			background-color: $bg-color;
+			overflow: hidden;
 			cursor: pointer;
 
 			&::before {
